<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>as2_mc_output</name>
  <version>0.0.0</version>
  <description>Modular Class For Output Variables (node results, that is, publishers)</description>
  <maintainer email="santiago.tapia@upm.es">stapia</maintainer>
  <license>TBSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
